Workaround for QTBUG-42500

Process has to have LD_LIBRARY_PATH set to empty string to not inherit it by default